--- a/docker/nginx-conf/nginx.conf
+++ b/docker/nginx-conf/nginx.conf
@@ -1,6 +1,11 @@
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    ssl_certificate /etc/nginx/conf.d/ssl/ownsafe.crt;
+    ssl_certificate_key /etc/nginx/conf.d/ssl/ownsafe.key;
+    include /etc/nginx/conf.d/ssl/ssl-params.conf;
     
     server_name localhost;
 
