--- a/docker/nginx-conf/nginx.conf
+++ b/docker/nginx-conf/nginx.conf
@@ -16,6 +16,8 @@ server {
         root /var/www/html;
         index index.php index.html;
         try_files $uri $uri/ /index.php?$args;
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, HEAD, OPTIONS';
     }
 
     location ~* \.php$ {
@@ -23,5 +25,7 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, HEAD, OPTIONS';
     }
 }
