bash mariadb-data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,11 +44,11 @@ services:
       MARIADB_DATABASE: ownsafe
       MARIADB_USER: ownsafe
       MARIADB_PASSWORD: ownsafe
-    #command:
-    #  - bash
-    #  - -c
-    #  - >
-    #  -  mkdir -p ./docker/mariadb-data;
+    command:
+      - bash
+      - -c
+      - >
+      -  mkdir -p ./docker/mariadb-data;
     volumes:
       - ./docker/mariadb-data:/var/lib/mysql
     networks:
