--- a/docker/nginx-conf/nginx.conf
+++ b/docker/nginx-conf/nginx.conf
@@ -1,11 +1,11 @@
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    ssl_certificate /etc/nginx/conf.d/ssl/ownsafe.crt;
-    ssl_certificate_key /etc/nginx/conf.d/ssl/ownsafe.key;
-    include /etc/nginx/conf.d/ssl/ssl-params.conf;
+    #listen 443 ssl;
+    #listen [::]:443 ssl;
+    #ssl_certificate /etc/nginx/conf.d/ssl/ownsafe.crt;
+    #ssl_certificate_key /etc/nginx/conf.d/ssl/ownsafe.key;
+    #include /etc/nginx/conf.d/ssl/ssl-params.conf;
     
     server_name localhost;
 
@@ -17,7 +17,10 @@ server {
         index index.php index.html;
         try_files $uri $uri/ /index.php?$args;
         add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, HEAD, OPTIONS';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+
     }
 
     location ~* \.php$ {
@@ -26,6 +29,9 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, HEAD, OPTIONS';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+
     }
 }
