--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,17 +54,19 @@ services:
     networks:
       - net
 
-  #phpmyadmin:
-  #   image: phpmyadmin/phpmyadmin:latest
-  #   container_name: Ownsafe_PHPMYADMIN
-  #   hostname: ownsafe_phpmyadmin
+  phpmyadmin:
+     image: phpmyadmin/phpmyadmin:latest
+     container_name: Ownsafe_PHPMYADMIN
+     hostname: ownsafe_phpmyadmin
      #restart: no
-  #   ports:
-  #      - 82:8080
-  #   environment:
-  #      PMA_HOST: ownsafe_db:3307
-  #   depends_on:
-  #      - mariadb
+     ports:
+       - 82:8080
+     environment:
+        PMA_HOST: ownsafe_db
+     networks:
+       - net
+     depends_on:
+       - mariadb
 
 networks:
   net:
