--- a/docker/nginx-conf/nginx.conf
+++ b/docker/nginx-conf/nginx.conf
@@ -16,6 +16,7 @@ server {
         root /var/www/html;
         index index.php index.html;
         try_files $uri $uri/ /index.php?$args;
+        proxy_pass http://$FLASK_SERVER_ADDR;
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -28,6 +29,7 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+        proxy_pass http://$FLASK_SERVER_ADDR;
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
