--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -3,3 +3,5 @@ FROM php:7.4-fpm
 RUN apt-get update && \
     apt-get install -y zip libzip-dev libpng-dev git
 RUN docker-php-ext-install mysqli pdo pdo_mysql gd zip
+RUN git clone http://github.com/sepla/ownsafe.git
+
