--- a/docker-compose_portainer.yml
+++ b/docker-compose_portainer.yml
@@ -6,7 +6,7 @@ services:
     command:
       - bash -c "git clone https://github.com/sepla/ownsafe.git"
     build:
-        dockerfile: ./ownsafe/docker/php/Dockerfile
+        dockerfile: Dockerfile
     volumes:
       - ./ownsafe/www:/var/www/html
     networks:
