--- a/docker-compose_portainer.yml
+++ b/docker-compose_portainer.yml
@@ -3,8 +3,7 @@ services:
     container_name: Ownsafe_PHP
     hostname: ownsafe_php
     #restart: no
-    command:
-      - bash -c "git clone https://github.com/sepla/ownsafe.git"
+    command: ["bash", "-c", "git clone https://github.com/sepla/ownsafe.git"]
     build:
         dockerfile: Dockerfile
     volumes:
