--- a/docker-compose_portainer.yml
+++ b/docker-compose_portainer.yml
@@ -3,7 +3,7 @@ services:
     container_name: Ownsafe_PHP
     hostname: ownsafe_php
     #restart: no
-    working_dir: ./
+    working_dir: /
     command: ["bash", "-c", "git clone https://github.com/sepla/ownsafe.git"]
     build:
         dockerfile: ./docker/php/Dockerfile
