--- a/docker-compose_portainer.yml
+++ b/docker-compose_portainer.yml
@@ -4,11 +4,11 @@ services:
     hostname: ownsafe_php
     #restart: no
     working_dir: /
-    command: ["bash", "-c", "git clone https://github.com/sepla/ownsafe.git"]
+    command: ["bash", "-c", "git clone https://github.com/sepla/ownsafe.git /../../ownsafe"]
     build:
         dockerfile: ./docker/php/Dockerfile
     volumes:
-      - ownsafe:/var/www/html
+      - ./ownsafe/www:/var/www/html
     networks:
       - net
     depends_on:
