--- a/docker-compose_portainer.yml
+++ b/docker-compose_portainer.yml
@@ -3,10 +3,10 @@ services:
     container_name: Ownsafe_PHP
     hostname: ownsafe_php
     #restart: no
-    working_dir: /
-    command: ["bash", "-c", "cd ..;git clone https://github.com/sepla/ownsafe.git ./"]
+    #working_dir: /
+    command: ["bash", "-c", "git clone https://github.com/sepla/ownsafe.git"]
     build:
-        dockerfile: ./docker/php/Dockerfile
+      - dockerfile: ./docker/php/Dockerfile
     volumes:
       - ./ownsafe/www:/var/www/html
     networks:
