--- a/docker-compose_portainer.yml
+++ b/docker-compose_portainer.yml
@@ -6,7 +6,7 @@ services:
     #working_dir: /
     command: ["bash", "-c", "git clone https://github.com/sepla/ownsafe.git"]
     build:
-      - dockerfile: ./docker/php/Dockerfile
+        dockerfile: ./docker/php/Dockerfile
     volumes:
       - ./ownsafe/www:/var/www/html
     networks:
