--- a/docker-compose_portainer.yml
+++ b/docker-compose_portainer.yml
@@ -4,11 +4,11 @@ services:
     hostname: ownsafe_php
     #restart: no
     #working_dir: /
-    command: ["bash", "-c", "git clone https://github.com/sepla/ownsafe.git ../../ownsafe"]
+    command: ["bash", "-c", "git clone https://github.com/sepla/ownsafe.git ./"]
     build:
         dockerfile: ./docker/php/Dockerfile
     volumes:
-      - ./ownsafe/www:/var/www/html
+      - ./:/var/www/html
     networks:
       - net
     depends_on:
