--- a/docker-compose_portainer.yml
+++ b/docker-compose_portainer.yml
@@ -8,7 +8,7 @@ services:
     build:
         dockerfile: ./docker/php/Dockerfile
     volumes:
-      - ./:/var/www/html
+      - ./ownsafe:/var/www/html
     networks:
       - net
     depends_on:
