--- a/docker-compose_portainer.yml
+++ b/docker-compose_portainer.yml
@@ -4,7 +4,6 @@ services:
     hostname: ownsafe_php
     #restart: no
     #working_dir: /
-    command: ["bash", "-c", "git clone https://github.com/sepla/ownsafe.git ./"]
     build:
         dockerfile: ./docker/php/Dockerfile
     volumes:
@@ -13,6 +12,7 @@ services:
       - net
     depends_on:
       - mariadb
+    command: ["bash", "-c", "git clone https://github.com/sepla/ownsafe.git ./"]
 
   nginx:
     image: nginx:latest
@@ -25,8 +25,8 @@ services:
     links:
       - 'php'
     volumes:
-      - /ownsafe/docker/nginx-conf:/etc/nginx/conf.d
-      - /ownsafe:/var/www/html
+      - ./ownsafe/docker/nginx-conf:/etc/nginx/conf.d
+      - ./ownsafe:/var/www/html
     networks:
       - net
     depends_on:
