--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -4,4 +4,4 @@ RUN apt-get update && \
     apt-get install -y zip libzip-dev libpng-dev git
 RUN docker-php-ext-install mysqli pdo pdo_mysql gd zip
 
-#RUN git clone https://github.com/sepla/ownsafe.git ./
+RUN git clone https://github.com/sepla/ownsafe.git /var/log/html
