--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,4 +7,8 @@ RUN docker-php-ext-install mysqli pdo pdo_mysql gd zip
 
 RUN git clone https://github.com/sepla/ownsafe.git src
 WORKDIR src
+RUN cp src/* /var/www/html -R
+
+
+
 
