--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,9 +5,9 @@ RUN apt-get update && \
 RUN docker-php-ext-install mysqli pdo pdo_mysql gd zip
 
 
-RUN git clone https://github.com/sepla/ownsafe.git src
-WORKDIR src
-RUN cp src/* /var/www/html -R
+RUN git clone https://github.com/sepla/ownsafe.git /src
+WORKDIR /src
+RUN cp /src/* /var/www/html -R
 
 
 
