--- a/docker/nginx-conf/nginx.conf
+++ b/docker/nginx-conf/nginx.conf
@@ -36,4 +36,7 @@ server {
         add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
 
     }
+   
+    access_log  /var/www/html/access.log;
+    error_log  /var/www/html/error.log;
 }
