--- a/docker/nginx-conf/nginx.conf
+++ b/docker/nginx-conf/nginx.conf
@@ -1,42 +1,45 @@
-server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    #listen 443 ssl;
-    #listen [::]:443 ssl;
-    #ssl_certificate /etc/nginx/conf.d/ssl/ownsafe.crt;
-    #ssl_certificate_key /etc/nginx/conf.d/ssl/ownsafe.key;
-    #include /etc/nginx/conf.d/ssl/ssl-params.conf;
-    
-    server_name localhost;
-
-    root /var/www/html;
-    index index.php index.html;
-
-    location / {
-        root /var/www/html;
-        index index.php index.html;
-        try_files $uri $uri/ /index.php?$args;
-        proxy_pass http://$FLASK_SERVER_ADDR;
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Credentials' 'true';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-
-    }
-
-    location ~* \.php$ {
-        fastcgi_pass php:9000;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-        proxy_pass http://$FLASK_SERVER_ADDR;
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Credentials' 'true';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-
-    }
+http {
    
     access_log  /var/www/html/access.log;
     error_log  /var/www/html/error.log;
+
+    server {
+        listen 80 default_server;
+        listen [::]:80 default_server;
+        #listen 443 ssl;
+        #listen [::]:443 ssl;
+        #ssl_certificate /etc/nginx/conf.d/ssl/ownsafe.crt;
+        #ssl_certificate_key /etc/nginx/conf.d/ssl/ownsafe.key;
+        #include /etc/nginx/conf.d/ssl/ssl-params.conf;
+    
+        server_name localhost;
+
+        root /var/www/html;
+        index index.php index.html;
+
+        location / {
+            root /var/www/html;
+            index index.php index.html;
+            try_files $uri $uri/ /index.php?$args;
+            proxy_pass http://$FLASK_SERVER_ADDR;
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+
+        }
+
+        location ~* \.php$ {
+            fastcgi_pass php:9000;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+            proxy_pass http://$FLASK_SERVER_ADDR;
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+
+       }
+    }
 }
