--- a/docker/nginx-conf/nginx.conf
+++ b/docker/nginx-conf/nginx.conf
@@ -1,7 +1,7 @@
 http {
-   
-    access_log  /var/www/html/access.log;
-    error_log  /var/www/html/error.log;
+
+    access_log  /var/log/nginx/access.log;
+    error_log  /var/log/nginc/error.log;
 
     server {
         listen 80 default_server;
