--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -3,6 +3,7 @@ FROM nginx:latest
 RUN apt-get update && \
     apt-get install -y zip libzip-dev libpng-dev git
 
+RUN mkdir -p /var/log/nginx
 RUN touch /var/log/nginx/access.log
 RUN touch /var/log/nginx/error.log
 #RUN git clone https://github.com/sepla/ownsafe.git /src
