--- a/docker/nginx-conf/nginx.conf
+++ b/docker/nginx-conf/nginx.conf
@@ -13,8 +13,8 @@ http {
         #include /etc/nginx/conf.d/ssl/ssl-params.conf;
     
         server_name localhost;
-        access_log  /var/log/nginx/access.log;
-        error_log  /var/log/nginx/error.log;
+        access_log  /var/log/nginx/ownsafe-access.log;
+        error_log  /var/log/nginx/ownsafe-error.log;
         root /var/www/html;
         index index.php index.html;
 
