--- a/docker/nginx-conf/nginx.conf
+++ b/docker/nginx-conf/nginx.conf
@@ -17,11 +17,11 @@ server {
             root /var/www/html;
             index index.php index.html;
             try_files $uri $uri/ /index.php?$args;
-            proxy_pass http://$FLASK_SERVER_ADDR;
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Credentials' 'true';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            #proxy_pass http://$FLASK_SERVER_ADDR;
+            #add_header 'Access-Control-Allow-Origin' '*';
+            #add_header 'Access-Control-Allow-Credentials' 'true';
+            #add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            #add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
 
         }
 
@@ -30,11 +30,11 @@ server {
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-            proxy_pass http://$FLASK_SERVER_ADDR;
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Credentials' 'true';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            #proxy_pass http://$FLASK_SERVER_ADDR;
+            #add_header 'Access-Control-Allow-Origin' '*';
+            #add_header 'Access-Control-Allow-Credentials' 'true';
+            #add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            #add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
 
        }
 }
