--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,14 +1,5 @@
 services:
-#  ownsafe:
-#    build:
-#        context: https://github.com/sepla/ownsafe.git
-#        dockerfile: ./docker/ownsafe/Dockerfile
-#    #command: ['bash','-c','git clone https://github.com/sepla/ownsafe.git ./']
-#    networks:
-#      - net 
-#    depends_on:
-#      - nginx
-  
+
   php:
     container_name: Ownsafe_PHP
     hostname: ownsafe_php
@@ -34,7 +25,7 @@ services:
       - 81:80
       - 444:443
     links:
-      - 'php'
+      - php
     volumes:
       - ./www/ownsafe/docker/nginx-conf:/etc/nginx/conf.d
       - ./www:/var/www/html
