--- a/docker/nginx-conf/nginx.conf
+++ b/docker/nginx-conf/nginx.conf
@@ -31,7 +31,11 @@ server {
         	include fastcgi_params;
         	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         	fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-        	
+        	fastcgi_buffers 8 16k; # increase the buffer size for PHP-FTP
+  		fastcgi_buffer_size 32k; # increase the buffer size for PHP-FTP
+  		fastcgi_connect_timeout 60;
+  		fastcgi_send_timeout 300;
+  		fastcgi_read_timeout 300;
             #proxy_pass http://$FLASK_SERVER_ADDR;
             #add_header 'Access-Control-Allow-Origin' '*';
             #add_header 'Access-Control-Allow-Credentials' 'true';
