--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,11 +9,12 @@ services:
         dockerfile: ./docker/php/Dockerfile
     volumes:
       - ./www:/var/www/html
-    ports:
-      - :9000
+    expose:  
+       - 9000
     depends_on:
       - mariadb
     command: ['bash','-c','git clone https://github.com/sepla/ownsafe.git ./ownsafe; tail -f ./ownsafe/index.html']
+    tty: true
 
   nginx:
     container_name: Ownsafe_NGINX
