--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
        - 9000
     depends_on:
       - mariadb
-    command: ['bash','-c','git clone https://github.com/sepla/ownsafe.git ./ownsafe; tail -f ./ownsafe/index.html']
+    command: ['bash','-c','git clone https://github.com/sepla/ownsafe.git ./ownsafe']
     tty: true
 
   nginx:
