--- a/docker/nginx-conf/nginx.conf
+++ b/docker/nginx-conf/nginx.conf
@@ -1,46 +1,16 @@
 server {
-        listen 80 default_server;
-        listen [::]:80 default_server;
-        #listen 443 ssl;
-        #listen [::]:443 ssl;
-        #ssl_certificate /etc/nginx/conf.d/ssl/ownsafe.crt;
-        #ssl_certificate_key /etc/nginx/conf.d/ssl/ownsafe.key;
-        #include /etc/nginx/conf.d/ssl/ssl-params.conf;
-    
-        server_name localhost;
-        access_log  /var/log/nginx/ownsafe-access.log;
-        error_log  /var/log/nginx/ownsafe-error.log;
-        root /var/www/html;
-        index index.php index.html;
-
-        location / {
-            root /var/www/html;
-            index index.php index.html;
-            try_files $uri $uri/ /index.php?$args;
-            
-            #proxy_pass http://$FLASK_SERVER_ADDR;
-            #add_header 'Access-Control-Allow-Origin' '*';
-            #add_header 'Access-Control-Allow-Credentials' 'true';
-            #add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            #add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-
-        }
-
-        location ~* \.php$ {
-            fastcgi_pass php:9000;
-        	include fastcgi_params;
-        	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        	fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-        	fastcgi_buffers 8 16k; # increase the buffer size for PHP-FTP
-  		fastcgi_buffer_size 32k; # increase the buffer size for PHP-FTP
-  		fastcgi_connect_timeout 60;
-  		fastcgi_send_timeout 300;
-  		fastcgi_read_timeout 300;
-            #proxy_pass http://$FLASK_SERVER_ADDR;
-            #add_header 'Access-Control-Allow-Origin' '*';
-            #add_header 'Access-Control-Allow-Credentials' 'true';
-            #add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            #add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-
-       }
+    index index.php index.html;
+    server_name phpfpm.local;
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+    root /var/www/html;
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
 }
