--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,13 +8,14 @@ services:
         context: https://github.com/sepla/ownsafe.git
         dockerfile: ./docker/php/Dockerfile
     volumes:
-      - ./www:/var/www/html
-    expose:  
-       - 9000
+      - '../:/var/www/html'
+      - './docker/php/php-logging.conf:/usr/local/etc/php-fpm.d/zz-log.conf'
+    #expose:  
+    #  - 9000
     depends_on:
       - mariadb
-    command: ['bash','-c','git clone https://github.com/sepla/ownsafe.git ./ownsafe']
-    tty: true
+    #command: ['bash','-c','git clone https://github.com/sepla/ownsafe.git ./ownsafe']
+    #tty: true
 
   nginx:
     container_name: Ownsafe_NGINX
