--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -5,11 +5,11 @@ RUN apt-get update && \
 
 RUN mkdir -p /var/log/nginx
 
-RUN git clone https://github.com/sepla/ownsafe.git /ownsafe
-ADD install-app.sh /install-app.sh
-RUN chmod +x /install-app.sh
-CMD ["/install-app.sh"]
-ENTRYPOINT ["/docker-entrypoint.sh","nginx"]
+#RUN git clone https://github.com/sepla/ownsafe.git /ownsafe
+#ADD install-app.sh /install-app.sh
+#RUN chmod +x /install-app.sh
+#CMD ["/install-app.sh"]
+#ENTRYPOINT ["/docker-entrypoint.sh","nginx"]
 
 
 
