--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,8 +12,7 @@ services:
       #dockerfile: php/Dockerfile
     volumes:
       - './www:/var/www/html'
-      - './docker:/var/www'
-      - './docker/php/php-logging.conf:/usr/local/etc/php-fpm.d/zz-log.conf'
+      #- './docker/php/php-logging.conf:/usr/local/etc/php-fpm.d/zz-log.conf'
     depends_on:
       - mariadb
        #entrypoint: [ "bash", "-c", "sleep 10 && mongo --host mongo:27017 --eval 'rs.initiate()'"] 
