--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -9,8 +9,8 @@ RUN docker-php-ext-install curl gd mysqli pdo pdo_mysql xml
 RUN git clone https://github.com/sepla/ownsafe.git /ownsafe
 RUN cp /ownsafe/docker/install-app.sh /
 RUN chmod +x /install-app.sh
-RUN mkdir /docker/nginx-conf
-RUN mkdir /docker/php
+RUN mkdir -p /docker/nginx-conf
+RUN mkdir -p /docker/php
 RUN cp -r /ownsafe/www/* /var/www/html
 #RUN cp /ownsafe/docker/php/php-logging.conf /usr/local/etc/php-fpm.d/zz-log.conf
 #ENTRYPOINT ["/ownsafe/docker/install-app.sh"]
