--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -5,8 +5,8 @@ RUN apt-get update && \
 
 RUN mkdir -p /var/log/nginx
 
-RUN git clone https://github.com/sepla/ownsafe.git /ownsafe
-RUN cp -r /ownsafe/docker/nginx-conf/* /etc/nginx/conf.d
+#RUN git clone https://github.com/sepla/ownsafe.git /ownsafe
+#RUN cp -r /ownsafe/docker/nginx-conf/* /etc/nginx/conf.d
 #ADD install-app.sh /install-app.sh
 #RUN chmod +x /install-app.sh
 #CMD ["/install-app.sh"]
