--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -10,7 +10,7 @@ RUN git clone https://github.com/sepla/ownsafe.git /ownsafe
 RUN cp /ownsafe/docker/install-app.sh /
 RUN chmod +x /install-app.sh
 RUN mkdir -p /docker/nginx-conf
-RUN mkdir -p /docker/php
+#RUN mkdir -p /docker/php
 RUN cp -r /ownsafe/www/* /var/www/html
 #RUN cp /ownsafe/docker/php/php-logging.conf /usr/local/etc/php-fpm.d/zz-log.conf
 #ENTRYPOINT ["/ownsafe/docker/install-app.sh"]
