--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -56,12 +56,15 @@ volumes:
   mariadb-data:
     driver: local
     driver_opts:
+        type: none
         device: /data/ownsafe/mariadb-data
   www-data:
     driver: local
     driver_opts:
+        type: none
         device: /data/ownsafe/www-data
   nginx-conf:
     driver: local
     driver_opts:
+        type: none
         device: /data/ownsafe/nginx-conf
